--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        ref: dev
+        ref: main
 
     - name: Create backend .env file
       run: |
