--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout branch
       uses: actions/checkout@v4
       with:
-        ref: dev
+        ref: main
       
     - name: Create Application .env file
       run: |
