--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -9,10 +9,19 @@ jobs:
     runs-on: 3t
 
     steps:
+    # This step forces the runner to delete the corrupted folder manually
+    - name: Clean Corrupted Workspace
+      run: |
+        echo "Cleaning up old runner directory..."
+        rm -rf ${{ github.workspace }}/*
+        rm -rf ${{ github.workspace }}/.git
+
     - name: Checkout branch
       uses: actions/checkout@v4
       with:
         ref: main
+        clean: true
+        fetch-depth: 0  # Fetches all history to ensure 'main' is found correctly
       
     - name: Create Application .env file
       run: |
