--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -9,15 +9,18 @@ jobs:
     runs-on: 3t
 
     steps:
-    # Manual Fetch to bypass the actions/checkout error
-    - name: Manual Git Checkout
+    # STEP 1: MANUALLY CLEAN AND CLONE (Replaces actions/checkout)
+    - name: Clean Workspace and Clone
       run: |
-        echo "Clearing workspace..."
-        sudo rm -rf ./*
-        sudo rm -rf ./.git
-        echo "Cloning repository manually..."
-        git clone -b dev https://github.com/Jaygohel164/3-iter-project.git .
-      
+        echo "Removing old files to fix Git corruption..."
+        sudo rm -rf ./* || true
+        sudo rm -rf ./.git || true
+        
+        echo "Cloning fresh copy of dev branch..."
+        # Using the PAT secret you created in GitHub Settings
+        git clone -b dev https://${{ secrets.GH_PAT }}@github.com/Jaygohel164/3-iter-project.git .
+
+    # STEP 2: CREATE .ENV FILES
     - name: Create Application .env file
       run: |
         cat <<EOF > .env
@@ -27,26 +30,22 @@ jobs:
         API_PREFIX=/api/v1
         CORS_ORIGIN=*
         
-        # Database
         DATABASE_URL=postgres://postgres:s!6hacls1briPhIph%2B6l@dev-gnostic.cn8wmm0i46k9.ap-south-1.rds.amazonaws.com:5432/dev_gdnostic
         MEETINGS_POSTGRES_USER=postgres
         MEETINGS_POSTGRES_DB=dev_gdnostic
         MEETINGS_POSTGRES_PASSWORD=s!6hacls1briPhIph%2B6l
         MEETINGS_POSTGRES_HOST=dev-gnostic.cn8wmm0i46k9.ap-south-1.rds.amazonaws.com
 
-        # Redis
         REDIS_HOST=65.1.130.47
         REDIS_PORT=6379
         REDIS_PASSWORD=gnosticpass
         REDIS_URL=redis://gnosticpass@65.1.130.47:6379/0
         
-        # MediaSoup
         MEDIASOUP_ANNOUNCED_IP=3.110.199.153
         MEDIASOUP_LISTEN_IP=0.0.0.0
         MEDIASOUP_RTC_MIN_PORT=47000
         MEDIASOUP_RTC_MAX_PORT=47099
         
-        # Services
         FILING_SERVICE_URL=https://filing-service.gnostic.cloud
         CALENDAR_SERVICE_URL=https://calendar-service.gnostic.cloud
         IAM_SERVICE_URL=https://iam-service.gnostic.cloud
@@ -59,6 +58,7 @@ jobs:
         DOCKER_IMAGE_TAG=latest
         EOF
 
+    # STEP 3: DOCKER DEPLOYMENT
     - name: Build Docker Image
       run: docker compose --env-file .env.docker build
 
