--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -9,16 +9,17 @@ jobs:
     runs-on: 3t  # Using the runner name from your logs
 
     steps:
-    # 1. FIX: Manual Checkout to bypass Git "Exit Code 1"
-    - name: Clean and Clone Repository
+    # STEP 1: FORCE CLEAN AND CLONE (Fixes the Git Exit Code 1 error)
+    - name: Manual Git Checkout
       run: |
-        echo "Clearing corrupted workspace..."
+        echo "Cleaning up corrupted runner directory..."
         sudo rm -rf ./* || true
         sudo rm -rf ./.git || true
-        echo "Cloning dev branch..."
+        echo "Cloning repository..."
+        # Using the PAT secret you created in GitHub Settings
         git clone -b dev https://${{ secrets.GH_PAT }}@github.com/Jaygohel164/3-iter-project.git .
 
-    # 2. BACKEND .env (inside the 'backend' folder)
+    # STEP 2: CREATE BACKEND .ENV
     - name: Create Backend .env
       run: |
         cat <<EOF > backend/.env
@@ -28,7 +29,7 @@ jobs:
         API_PREFIX=/api/v1
         CORS_ORIGIN=*
         
-        # DB & Redis
+        # Database & Redis
         DATABASE_URL=postgres://postgres:s!6hacls1briPhIph%2B6l@dev-gnostic.cn8wmm0i46k9.ap-south-1.rds.amazonaws.com:5432/dev_gdnostic
         MEETINGS_POSTGRES_USER=postgres
         MEETINGS_POSTGRES_DB=dev_gdnostic
@@ -36,33 +37,24 @@ jobs:
         MEETINGS_POSTGRES_HOST=dev-gnostic.cn8wmm0i46k9.ap-south-1.rds.amazonaws.com
         REDIS_URL=redis://gnosticpass@65.1.130.47:6379/0
         
-        # MediaSoup
+        # MediaSoup (Critical for your project)
         MEDIASOUP_ANNOUNCED_IP=3.110.199.153
         MEDIASOUP_LISTEN_IP=0.0.0.0
         MEDIASOUP_RTC_MIN_PORT=47000
         MEDIASOUP_RTC_MAX_PORT=47099
-        
-        # Services
-        FILING_SERVICE_URL=https://filing-service.gnostic.cloud
-        CALENDAR_SERVICE_URL=https://calendar-service.gnostic.cloud
-        IAM_SERVICE_URL=https://iam-service.gnostic.cloud
         EOF
 
-    # 3. FRONTEND .env (inside the 'frontend' folder)
+    # STEP 3: CREATE FRONTEND .ENV
     - name: Create Frontend .env
       run: |
         cat <<EOF > frontend/.env
-        VITE_API_URL=https://api.gnostic.cloud/api/v1
-        VITE_SOCKET_URL=https://api.gnostic.cloud
-        NODE_ENV=production
+        VITE_API_URL=http://3.110.199.153:3001/api/v1
+        VITE_SOCKET_URL=http://3.110.199.153:3001
         EOF
 
-    # 4. DOCKER DEPLOYMENT
-    - name: Build and Deploy
+    # STEP 4: DOCKER BUILD & DEPLOY
+    - name: Build and Start Containers
       run: |
-        # Build images using the docker-compose.yml in the root
         docker compose build
-        
-        # Restart the stack
         docker compose down --remove-orphans
         docker compose up -d
