--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -6,20 +6,21 @@ on:
 jobs:
   deploy:
     name: Deploy
-    runs-on: 3t  # Using the runner name from your logs
+    runs-on: 3t
 
     steps:
-    # STEP 1: FORCE CLEAN AND CLONE (Fixes the Git Exit Code 1 error)
-    - name: Manual Git Checkout
+    # 1. FORCE CLEAN (This stops the "Exit Code 1" by using sudo to wipe the folder)
+    - name: Force Clean Workspace
       run: |
-        echo "Cleaning up corrupted runner directory..."
-        sudo rm -rf ./* || true
-        sudo rm -rf ./.git || true
-        echo "Cloning repository..."
-        # Using the PAT secret you created in GitHub Settings
+        sudo rm -rf /home/ubuntu/3-iter-project/actions-runner/_work/3-iter-project/3-iter-project/*
+        sudo rm -rf /home/ubuntu/3-iter-project/actions-runner/_work/3-iter-project/3-iter-project/.* || true
+
+    # 2. MANUAL CLONE (Using PAT to bypass the GitHub Action bug)
+    - name: Manual Git Clone
+      run: |
         git clone -b dev https://${{ secrets.GH_PAT }}@github.com/Jaygohel164/3-iter-project.git .
 
-    # STEP 2: CREATE BACKEND .ENV
+    # 3. CREATE BACKEND .ENV
     - name: Create Backend .env
       run: |
         cat <<EOF > backend/.env
@@ -28,23 +29,15 @@ jobs:
         SERVER_PORT=3001
         API_PREFIX=/api/v1
         CORS_ORIGIN=*
-        
-        # Database & Redis
         DATABASE_URL=postgres://postgres:s!6hacls1briPhIph%2B6l@dev-gnostic.cn8wmm0i46k9.ap-south-1.rds.amazonaws.com:5432/dev_gdnostic
-        MEETINGS_POSTGRES_USER=postgres
-        MEETINGS_POSTGRES_DB=dev_gdnostic
-        MEETINGS_POSTGRES_PASSWORD=s!6hacls1briPhIph%2B6l
-        MEETINGS_POSTGRES_HOST=dev-gnostic.cn8wmm0i46k9.ap-south-1.rds.amazonaws.com
         REDIS_URL=redis://gnosticpass@65.1.130.47:6379/0
-        
-        # MediaSoup (Critical for your project)
         MEDIASOUP_ANNOUNCED_IP=3.110.199.153
         MEDIASOUP_LISTEN_IP=0.0.0.0
         MEDIASOUP_RTC_MIN_PORT=47000
         MEDIASOUP_RTC_MAX_PORT=47099
         EOF
 
-    # STEP 3: CREATE FRONTEND .ENV
+    # 4. CREATE FRONTEND .ENV
     - name: Create Frontend .env
       run: |
         cat <<EOF > frontend/.env
@@ -52,9 +45,9 @@ jobs:
         VITE_SOCKET_URL=http://3.110.199.153:3001
         EOF
 
-    # STEP 4: DOCKER BUILD & DEPLOY
-    - name: Build and Start Containers
+    # 5. DOCKER DEPLOY
+    - name: Build and Start
       run: |
-        docker compose build
-        docker compose down --remove-orphans
-        docker compose up -d
+        sudo docker compose build
+        sudo docker compose down --remove-orphans
+        sudo docker compose up -d
