--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
 
   backend:
     build: ./backend
+    restart: always
     depends_on:
       - db
     environment:
@@ -37,10 +38,9 @@ services:
       - app-network
 
 volumes:
-  db_data: {}
+  db_data:
 
 networks:
   app-network:
     driver: bridge
-    driver_opts:
-      com.docker.network.enable_ipv6: "true"
+   
