--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   deploy:
     name: Production Deployment
-    runs-on: 3t
+    runs-on: 3t  # This runs on your EC2 instance agent
 
     steps:
       - name: Cleanup Workspace
@@ -16,6 +16,7 @@ jobs:
 
       - name: Clone Repository
         run: |
+          # Uses your PAT to clone the private repo
           git clone https://${{ secrets.GH_PAT }}@github.com/Jaygohel164/3-iter-project.git .
 
       - name: Setup Backend Environment
@@ -23,16 +24,16 @@ jobs:
           cat <<EOF > backend/.env
           AUTO_MIGRATE=true
           NODE_ENV=production
-          SERVER_PORT=3001
+          SERVER_PORT=3500
           API_PREFIX=/api/v1
           CORS_ORIGIN=*
           
-          # Database & Infrastructure
+          # Database & Infrastructure (Hardcoded as requested)
           DATABASE_URL=postgres://postgres:s!6hacls1briPhIph%2B6l@dev-gnostic.cn8wmm0i46k9.ap-south-1.rds.amazonaws.com:5432/dev_gdnostic
           REDIS_URL=redis://gnosticpass@65.1.130.47:6379/0
           
-          # RTC Configuration
-          MEDIASOUP_ANNOUNCED_IP=3.110.199.153
+          # RTC Configuration using your EC2_HOST secret
+          MEDIASOUP_ANNOUNCED_IP=${{ secrets.EC2_HOST }}
           MEDIASOUP_LISTEN_IP=0.0.0.0
           MEDIASOUP_RTC_MIN_PORT=47000
           MEDIASOUP_RTC_MAX_PORT=47099
@@ -41,17 +42,20 @@ jobs:
       - name: Setup Frontend Environment
         run: |
           cat <<EOF > frontend/.env
-          VITE_API_URL=http://3.110.199.153:3001/api/v1
-          VITE_SOCKET_URL=http://3.110.199.153:3001
+          # Using EC2_HOST secret for the frontend to find the backend
+          VITE_API_URL=http://${{ secrets.EC2_HOST }}:3500/api/v1
+          VITE_SOCKET_URL=http://${{ secrets.EC2_HOST }}:3500
           EOF
 
       - name: Docker Orchestration
         run: |
-          docker compose build
-          docker compose down --remove-orphans
-          docker compose up -d
+          # Clean build cache to prevent disk space errors
+          sudo docker builder prune -f
+          sudo docker compose build --no-cache
+          sudo docker compose down --remove-orphans
+          sudo docker compose up -d
 
       - name: Deployment Status
         run: |
-          echo "Deployment successful. Containers running:"
-          docker ps
+          echo "Deployment successful to ${{ secrets.EC2_HOST }} as ${{ secrets.EC2_USERNAME }}"
+          sudo docker ps
